--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="nav">
             <div class="nav-logo">
                 <div class="nav-img"></div>
+                <div class="nav-text">Hina Nadeem</div>
             </div>
             <ul class="nav-list">
                 <li class="nav-item active"><a href="#home">Home</a></li>
@@ -41,8 +42,7 @@
         <section id="home">
             <div class="home-text">
                 <div class="text">
-                    <div id="text-big">I'm <span id="name">Hina Nadeem</span>, a front-end developer passionate about
-                        creating responsive and visually appealing web applications.</div>
+                    <div id="text-big">I'm a <span id="name"></span></div>
                     <p class="home-desc">
                         I thrive on solving complex problems and continually seek new knowledge to enhance my skills. My
                         strengths in communication, collaboration, problem-solving, time management, and adaptability
@@ -194,12 +194,22 @@
                     </div>
                 </div>
             </div>
-
+            <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
         </section>
+
+
     </main>
 
 
 
+            <script>
+                let typed = new Typed("#name",{
+                    strings:["Front-end Developer","Programmer", "Problem-solver", "Coder" ],
+                    typeSpeed: 150,
+                    backSpeed: 150,
+                    loop  :true
+                });
+            </script>
 </body>
 
 </html>
