added contact section still in working process

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         <!---->
                         <div class="card-item swiper-slide">
                             <div id="i4" class="project-img"></div>
-                            <h2 class="project-name"> Tic-Tac-Toe Game</h2>
+                            <h2 class="project-name"> TicTacToe Game</h2>
                             <p class="project-msg">HTML, CSS & JS</p>
                             <button class="pr-btn"><a href="https://github.com/hi89141na/tic-tac-toe-game"
                                     title="Tic-Tac-Toe Gam">Read More</a></button>
@@ -276,6 +276,21 @@
                     <div class="swiper-slide-button swiper-button-next"></div>
                 </div>
             </div>
+        </section>
+        <section id="contact">
+            <span class="contact-title">Contact Me</span>
+            <p>Interested in working together Let's Connect</p>
+            <div class="contact-container">
+                <form action="index.html" class="contact-form">
+                    <input type="text" id="formName" name="myName" placeholder="Enter Your Name">
+                    <input type="email" name="email" id="email" placeholder="Enter Your Email">
+                    <input type="text" name="subject" id="subject" placeholder="Enter Subject Here">
+                    <input type="textarea" name="message" id="message" placeholder="Your Message">
+                    <button type="submit" class="form-btn">Contact</button>
+                </form>
+               
+            </div>
+
         </section>
 
     </main>
