--- a/index.html
+++ b/index.html
@@ -282,10 +282,12 @@
             <p>Interested in working together Let's Connect</p>
             <div class="contact-container">
                 <form action="index.html" class="contact-form">
-                    <input type="text" id="formName" name="myName" placeholder="Enter Your Name">
-                    <input type="email" name="email" id="email" placeholder="Enter Your Email">
+                    <div class="form-first">
+                        <input type="text" id="formName" name="myName" placeholder="Enter Your Name">
+                        <input type="email" name="email" id="email" placeholder="Enter Your Email">
+                    </div>
                     <input type="text" name="subject" id="subject" placeholder="Enter Subject Here">
-                    <input type="textarea" name="message" id="message" placeholder="Your Message">
+                    <textarea rows="10" name="message" id="message" placeholder="Your Message"></textarea>
                     <button type="submit" class="form-btn">Contact</button>
                 </form>
                
