Social links are added

--- a/index.html
+++ b/index.html
@@ -294,6 +294,12 @@
             </div>
 
         </section>
+        <footer>
+            
+            <a href="https://github.com/hi89141na" target="_blank" class="logo" id="logo1"></a>
+            <a href="https://www.linkedin.com/in/hinanadeem89141/" target="_blank" class="logo" id="logo2"></a>
+            <a  href="mailto:hi89141na@gmail.com" target="_blank" class="logo" id="logo3"></a>
+        </footer>
 
     </main>
 
