Added navbar styling for active section and added a profile picture and changes contact button with CV

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         <i class="fa-solid fa-arrow-right"></i>
                     </button>
                     <button id="btn2" class="btn">
-                        <a href="#contact">Contact me</a>
-                        <i class="fa-solid fa-arrow-right"></i>
+                        <a href="images/Hina Nadeem Resume.pdf" target="_blank">My CV</a>
+                        <i class="fa-solid fa-download"></i>
                     </button>
                 </div>
             </div>
