Chnaged the icons in home section Enclosed them in anchor tags

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 <div class="home-btns">
                     <button id="btn1" class="btn">
                         <a href="#projects">My Work</a>
-                        <i class="fa-solid fa-arrow-right"></i>
+                        <a href="#projects"><i class="fa-solid fa-arrow-right"></i></a>
                     </button>
                     <button id="btn2" class="btn">
                         <a href="images/Hina Nadeem Resume.pdf" target="_blank">My CV</a>
-                        <i class="fa-solid fa-download"></i>
+                      <a href="images/Hina Nadeem Resume.pdf" target="_blank">    <i class="fa-solid fa-download"></i></a> 
                     </button>
                 </div>
             </div>
