Added actual text and removes lorem

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section id="home">
             <div class="home-text">
                 <div class="text">
-                    <div id="text-big">I'm a <span id="name"></span></div>
+                    <div id="text-big">I'm  <span id="name"></span></div>
                     <p class="home-desc">
                         I thrive on solving complex problems and continually seek new knowledge to enhance my skills. My
                         strengths in communication, collaboration, problem-solving, time management, and adaptability
@@ -78,9 +78,7 @@
                                 HTML
                             </div>
                             <div class="skill-desc">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, modi.
-                                Dignissimos
-                                ratione deleniti nemo dolor rem sed nihil nulla saepe.
+                                Proficient in HTML, capable of structuring complex web pages and ensuring semantic, accessible markup.
                             </div>
                         </div>
                     </div>
@@ -93,9 +91,7 @@
                                 CSS
                             </div>
                             <div class="skill-desc">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, modi.
-                                Dignissimos
-                                ratione deleniti nemo dolor rem sed nihil nulla saepe.
+                                Skilled in CSS, with experience in creating responsive and visually appealing web designs using modern techniques like Flexbox and Grid.
                             </div>
                         </div>
                     </div>
@@ -108,9 +104,7 @@
                                 JS
                             </div>
                             <div class="skill-desc">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, modi.
-                                Dignissimos
-                                ratione deleniti nemo dolor rem sed nihil nulla saepe.
+                                Proficient in JavaScript, with a solid understanding of DOM manipulation, event handling, and asynchronous programming.
                             </div>
                         </div>
                     </div>
@@ -123,9 +117,7 @@
                                 C++
                             </div>
                             <div class="skill-desc">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, modi.
-                                Dignissimos
-                                ratione deleniti nemo dolor rem sed nihil nulla saepe.
+                                Knowledgeable in C++, with experience in object-oriented programming, data structures, and algorithm development
                             </div>
                         </div>
                     </div>
@@ -138,9 +130,7 @@
                                 SQL
                             </div>
                             <div class="skill-desc">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, modi.
-                                Dignissimos
-                                ratione deleniti nemo dolor rem sed nihil nulla saepe.
+                                Proficient in SQL, capable of designing, querying, and managing relational databases to ensure data integrity and efficiency.
                             </div>
                         </div>
                     </div>
@@ -153,9 +143,7 @@
                                 Java
                             </div>
                             <div class="skill-desc">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, modi.
-                                Dignissimos
-                                ratione deleniti nemo dolor rem sed nihil nulla saepe.
+                                "Intermediate knowledge in Java, familiar with its syntax, object-oriented principles, and standard libraries for building robust applications. Proficient in Java Swing for creating graphical user interfaces and JDBC for database connectivity and operations.
                             </div>
                         </div>
                     </div>
@@ -179,9 +167,7 @@
                         <p>Superior University Lahore</p>
                     </div>
                     <div class="ab-desc">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam culpa, assumenda tempore
-                        consequuntur quis iusto repellat repellendus delectus nihil qui dolor commodi harum quasi
-                        sapiente dolorem nulla veniam doloremque eos.
+                        Pursuing a BS in Software Engineering from Superior University, Lahore, with a current CGPA of 3.8, now in my 5th semester, demonstrating my dedication to academic excellence and technical proficiency.
                     </div>
                 </div>
                 <div class="about-ab">
@@ -193,9 +179,7 @@
                         <p>ProgrammerTech</p>
                     </div>
                     <div class="ab-desc">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo repudiandae unde iure fugit
-                        aspernatur aliquid! Dolore cum possimus autem, nam temporibus dolorum ipsa impedit deleniti
-                        provident quo consequatur voluptas eos!
+                        Front-End Developer Intern at ProgrammersTech (Remote, 1 month): Completed task-based work, contributing to various web development projects and enhancing my skills in front-end technologies.
                     </div>
                 </div>
             </div>
@@ -311,7 +295,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         let typed = new Typed("#name", {
-            strings: ["Front-end Developer", "Programmer", "Problem-solver", "Coder"],
+            strings: ["Hina Nadeem", "a Front-end Developer", "a Programmer", "a Problem-solver", "a Coder"],
             typeSpeed: 150,
             backSpeed: 150,
             loop: true
