Added valid urls to projects

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <div id="i1" class="project-img"></div>
                             <h2 class="project-name">Netflix Clone</h2>
                             <p class="project-msg">HTML & CSS</p>
-                            <button class="pr-btn"><a href="https://github.com/hi89141na/Netflix-Clone"
+                            <button class="pr-btn"><a href="https://github.com/hi89141na/Netflix-Clone" target="_blank"
                                     title="netflix clone">Read More</a></button>
                         </div>
                         <!---->
@@ -204,7 +204,7 @@
                             <div id="i2" class="project-img"></div>
                             <h2 class="project-name">Mini Calculator</h2>
                             <p class="project-msg">HTML, CSS & JS</p>
-                            <button class="pr-btn"><a href="https://github.com/hi89141na/Mini-Calculator-"
+                            <button class="pr-btn"><a href="https://github.com/hi89141na/Mini-Calculator-" target="_blank"
                                     title="mini calculator ">Read More</a></button>
                         </div>
                         <!---->
@@ -212,7 +212,7 @@
                             <div id="i3" class="project-img"></div>
                             <h2 class="project-name">To-Do List</h2>
                             <p class="project-msg">HTML, CSS & JS</p>
-                            <button class="pr-btn"><a href="https://github.com/hi89141na/Todo-List-usinh-HTML-CSS-JS"
+                            <button class="pr-btn"><a href="https://github.com/hi89141na/Todo-List-usinh-HTML-CSS-JS" target="_blank"
                                     title="To-Do List">Read More</a></button>
                         </div>
                         <!---->
@@ -220,7 +220,7 @@
                             <div id="i4" class="project-img"></div>
                             <h2 class="project-name"> TicTacToe Game</h2>
                             <p class="project-msg">HTML, CSS & JS</p>
-                            <button class="pr-btn"><a href="https://github.com/hi89141na/tic-tac-toe-game"
+                            <button class="pr-btn"><a href="https://github.com/hi89141na/tic-tac-toe-game" target="_blank"
                                     title="Tic-Tac-Toe Gam">Read More</a></button>
                         </div>
                         <!---->
@@ -228,28 +228,28 @@
                             <div id="i5" class="project-img"></div>
                             <h2 class="project-name">Hangman Game</h2>
                             <p class="project-msg">C++</p>
-                            <button class="pr-btn"><a href="#" title="Hangman Game">Read More</a></button>
+                            <button class="pr-btn"><a href="https://github.com/hi89141na/hangman-game.git" target="_blank" title="Hangman Game">Read More</a></button>
                         </div>
                         <!---->
                         <div class="card-item swiper-slide">
                             <div id="i6" class="project-img"></div>
                             <h2 class="project-name">Student Portal</h2>
                             <p class="project-msg">C++</p>
-                            <button class="pr-btn"><a href="#" title="Student Management System">Read More</a></button>
+                            <button class="pr-btn"><a href="https://github.com/hi89141na/student-portal" target="_blank" title="Student Management System">Read More</a></button>
                         </div>
                         <!---->
                         <div class="card-item swiper-slide">
                             <div id="i7" class="project-img"></div>
                             <h2 class="project-name">Quiz System</h2>
                             <p class="project-msg">C++</p>
-                            <button class="pr-btn"><a href="#" title="Quiz System">Read More</a></button>
+                            <button class="pr-btn"><a href="#" target="_blank" title="Quiz System">Read More</a></button>
                         </div>
                         <!---->
                         <div class="card-item swiper-slide">
                             <div id="i8" class="project-img"></div>
                             <h2 class="project-name">Restaurant Page</h2>
                             <p class="project-msg">HTML & CSS</p>
-                            <button class="pr-btn"><a href="#" title="Restaurant Webpage">Read More</a></button>
+                            <button class="pr-btn"><a href="#" target="_blank" title="Restaurant Webpage">Read More</a></button>
                         </div>
                         <!---->
 
